--- a/about.html
+++ b/about.html
@@ -3,5 +3,26 @@ layout: page
 title: "About Me"
 ---
 <div class="w-100">
-	<p>👾 Condimentum natoque sagittis scelerisque a morbi tristique adipiscing adipiscing adipiscing consectetur vehicula feugiat a ac sit aenean eleifend.Blandit parturient lacus nam nibh vestibulum adipiscing vestibulum a a bibendum vivamus volutpat molestie ultrices aptent nisi potenti dictumst vestibulum curabitur sapien.Curae praesent sodales erat ullamcorper adipiscing ac consectetur sit placerat condimentum lobortis hac sed.</p>
+	<p>
+<font size = 4> Hello! I am a physician-scientist at at Washington University in St. Louis committed to innovative, digital healthcare transformation. My interests revolve around the direct application of emerging healthcare technologies and informatics tools within the hospital system to improve the delivery of precision care. </font>
+
+<div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2">
+    <div>
+        <h2>Interests</h2>
+			* Artificial intelligence/Machine learning<br>
+			* Clinical phenotyping<br>
+			* Critical care outcomes<br> 
+			* Sepsis<br>
+			* Primary graft dysfunction of the lung<br>
+			</code>
+    </div>
+    <div style="display: inline-block;">
+        <h2>Education</h2>
+        	* M.D., Case Western Reserve University, Cleveland, OH<br>
+			* Internal Medicine, Washington University in St. Louis<br>
+			* Pulmonology & Critical Care Medicine, Washington University in St. Louis<br> 
+</code>
+    </div>
+</div>
+
 </div>
