--- a/about.html
+++ b/about.html
@@ -4,25 +4,14 @@ title:
 ---
 <div class="w-100">
 	<p>
-<font size = 4> Hello! I am a physician-scientist at at Washington University in St. Louis committed to innovative, digital healthcare transformation. My interests revolve around the direct application of emerging healthcare technologies and informatics tools within the hospital system to improve the delivery of precision care. </font>
 
-<div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2">
-    <div>
-        <h2>Interests</h2>
-			* Artificial intelligence/Machine learning<br>
-			* Clinical phenotyping<br>
-			* Critical care outcomes<br> 
-			* Sepsis<br>
-			* Primary graft dysfunction of the lung<br>
-			</code>
-    </div>
-    <div style="display: inline-block;">
-        <h2>Education</h2>
-        	* M.D., Case Western Reserve University, Cleveland, OH<br>
-			* Internal Medicine, Washington University in St. Louis<br>
-			* Pulmonology & Critical Care Medicine, Washington University in St. Louis<br> 
-</code>
-    </div>
-</div>
+		<h2>About Me</h2><font size = 4> Hello! <br>
+Dr. Andrew P. Michelson, joined the Department of Medicine in the division of Pulmonology and Critical Care Medicine as an Assistant Professor in July 2020.
+
+He is a physician-scientist with research interests in critical care outcomes, clinical informatics, and healthcare technology. His current research interests include: (1) the use of artificial intelligence/machine learning (AI/ML) to develop clinical prediction models for disease detection and treatment, with an emphasis on sepsis (life-threatening organ dysfunction due to an infectious process); (2) the evaluation of models for clinical deterioration; and (3) evaluation and implementation of novel healthcare technology. Leveraging his clinical informatics background, Dr. Michelson has also started collaborative efforts using AI/ML to predict resistance to carbapenem antibiotics and post-lung transplant outcomes.
+
+He received his medical degree from Case Western Reserve University School of Medicine. He then completed his internal medicine residency at the Washington University School of Medicine in St. Louis before serving as Chief Resident for the Department of Medicine. Dr. Michelson remained at Washington University in St. Louis to complete his Pulmonary and Critical Care Fellowship, while also serving as Chief Fellow for the Division of Pulmonary and Critical Care. During this time, he also completed the requirements to become board certified in Clinical Informatics and was selected as a 2019 awardee for the prestigious Knowlton Award.
+
+Dr. Michelson attends in the Medical Intensive Care Unit at Barnes-Jewish Hospital and serves as the Director for Critical Care Informatics Research. He is board certified in Internal Medicine and Pulmonology. He is a member of the American Thoracic Society as well as the American Medical Informatics Association.
 
 </div>
