--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ He received his medical degree from Case Western Reserve University School of Me
 Dr. Michelson attends in the Medical Intensive Care Unit at Barnes-Jewish Hospital and serves as the Director for Critical Care Informatics Research. He is board certified in Internal Medicine and Pulmonology. He is a member of the American Thoracic Society as well as the American Medical Informatics Association. <br>
 
 
-To view some of his lab's most recent publications, click <a href = "https://pubmed.ncbi.nlm.nih.gov/?term=%5BAUTHOR%5D+michelson+Andrew+P&sort=date">here</a>.
+To view some of his lab's most recent publications, click <a href = "https://scholar.google.com/citations?hl=en&user=HssUlXsAAAAJ&view_op=list_works&sortby=pubdate">here</a>.
 </div>
 	
 	
