--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title:
 <div class="w-100">
 	<p>
 
-		<h2>About Me</h2><font size = 4> Hello! <br>
+		<h2>About Me</h2><font size = 4>
 Dr. Andrew P. Michelson, joined the Department of Medicine in the division of Pulmonology and Critical Care Medicine as an Assistant Professor in July 2020. <br><p>
 
 He is a physician-scientist with research interests in critical care outcomes, clinical informatics, and healthcare technology. His current research interests include: (1) the use of artificial intelligence/machine learning (AI/ML) to develop clinical prediction models for disease detection and treatment, with an emphasis on sepsis (life-threatening organ dysfunction due to an infectious process); (2) the evaluation of models for clinical deterioration; and (3) evaluation and implementation of novel healthcare technology. Leveraging his clinical informatics background, Dr. Michelson has also started collaborative efforts using AI/ML to predict resistance to carbapenem antibiotics and post-lung transplant outcomes. <br><p>
