--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ Dr. Andrew P. Michelsona physician-scientist with research interests in critical
 
 He received his medical degree from Case Western Reserve University School of Medicine. He then completed his internal medicine residency at the Washington University School of Medicine in St. Louis before serving as Chief Resident for the Department of Medicine. Dr. Michelson remained at Washington University in St. Louis to complete his Pulmonary and Critical Care Fellowship, while also serving as Chief Fellow for the Division of Pulmonary and Critical Care.<br><p>
 
-Dr. Michelson attends in the Medical Intensive Care Unit at Barnes-Jewish Hospital and serves as the Director for Critical Care Informatics Research. He is board certified in Internal Medicine and Pulmonology. He is a member of the American Thoracic Society as well as the American Medical Informatics Association. <br><p>
+Dr. Michelson attends in the Medical Intensive Care Unit at Barnes-Jewish Hospital and serves as the Director for Critical Care Informatics Research. He is board certified in Internal Medicine and Pulmonology and Critical Care. He is a member of the American Thoracic Society as well as the American Medical Informatics Association. <br><p>
 
 
 To view some of his lab's most recent publications, click <u><a href = "https://scholar.google.com/citations?hl=en&user=HssUlXsAAAAJ&view_op=list_works&sortby=pubdate">here</a></u>.
