--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@ layout: default
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2">
     <div>
         <h2>Interests</h2>
-			* Artificial intelligence/Machine learning<br>
-			* Clinical phenotyping<br>
-			* Critical care outcomes<br> 
-			* Sepsis<br>
-			* Primary graft dysfunction of the lung<br>
+			<ul><li>Artificial intelligence/Machine learning</li>
+			<li>Clinical phenotyping</li>
+			<li>Critical care outcomes</li>
+			<li>Sepsis</li>
+			<li>Primary graft dysfunction of the lung</li>
+			<li>Computer vision</li></ul>
 			</code>
     </div>
     <div style="display: inline-block;">
         <h2>Education</h2>
-        	* M.D., Case Western Reserve University, Cleveland, OH<br>
-			* Internal Medicine, Washington University in St. Louis<br>
-			* Pulmonology & Critical Care Medicine, Washington University in St. Louis<br> 
+	    <ul><li>M.D., Case Western Reserve University, Cleveland, OH</li>
+		<li>Internal Medicine, Washington University in St. Louis</li>
+		<li>Pulmonology & Critical Care Medicine, Washington University in St. Louis</li>
 	   
 </code>
     </div>
