--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ layout: default
     <div>
         <h2>Interests</h2>
 			<ul><li>Artificial intelligence/Machine learning</li>
-			<li>Clinical phenotyping</li>
+			<li>Computer vision</li>
 			<li>Critical care outcomes</li>
 			<li>Sepsis</li>
 			<li>Primary graft dysfunction of the lung</li>
-			<li>Computer vision</li></ul>
+	    		</ul>
 			</code>
     </div>
     <div style="display: inline-block;">
