--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
  
 <hr>
-<font size = 4> Hello! <br>I am a physician-scientist at at Washington University in St. Louis committed to innovative, digital healthcare transformation. My interests revolve around the direct application of emerging healthcare technologies and informatics tools within the hospital system to improve the delivery of precision care. </font>
+<font size = 4>I am a physician-scientist committed to innovative, digital healthcare transformation. My interests revolve around the direct application of emerging healthcare technologies and informatics tools within the hospital system to improve the delivery of precision care. </font>
 <br>
 <div style="-webkit-column-count: 2; -moz-column-count: 2; column-count: 2">
     <div>
